modules/security_groups/main.tf
resource "aws_security_group" "bastion" {
  name   = "${var.lastname}-${var.project_name}-bastion-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.lastname}-${var.project_name}-bastion-sg"
    Engineer    = var.engineer_name
    ProjectCode = var.project_code
  }
}

resource "aws_security_group" "alb" {
  name   = "${var.lastname}-${var.project_name}-alb-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.lastname}-${var.project_name}-alb-sg"
    Engineer    = var.engineer_name
    ProjectCode = var.project_code
  }
}

resource "aws_security_group" "front" {
  name   = "${var.lastname}-${var.project_name}-frontend-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.lastname}-${var.project_name}-frontend-sg"
    Engineer    = var.engineer_name
    ProjectCode = var.project_code
  }
}

resource "aws_security_group" "back" {
  name   = "${var.lastname}-${var.project_name}-backend-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.lastname}-${var.project_name}-backend-sg"
    Engineer    = var.engineer_name
    ProjectCode = var.project_code
  }
}
